tests/specs/ecosystem/eryue0220/unplugin_stylex/0_2_4.test
eryue0220/unplugin-stylex/0.2.4
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --






error: TS2580 [ERROR]: Cannot find name 'process'.
export const isDevelopment = (process.env.NODE_ENV !== 'production' || process.env.BABEL_ENV !== 'production');
                              ~~~~~~~
    at file://<tmpdir>/src/core/constants.ts:1:31

TS2580 [ERROR]: Cannot find name 'process'.
export const isDevelopment = (process.env.NODE_ENV !== 'production' || process.env.BABEL_ENV !== 'production');
                                                                       ~~~~~~~
    at file://<tmpdir>/src/core/constants.ts:1:72

Found 2 errors.

